for some reason get(0) causes problems, changed by getFirst()